--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   ],
   "require": {
     "php": ">=7.3.0",
-    "lorisleiva/laravel-deployer": "^0.2.15"
+    "lorisleiva/laravel-deployer": "*"
   },
   "autoload": {
     "psr-0": {
